@@ -1,3 +1,9 @@
+2005-03-25  Nate Nielsen <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-util.c:
+    * libseahorse/seahorse-util.h: Change default extension to '.pgp' for 
+    compatibility. Fixed problems with suffixes (and a memory leak).
+    
 2005-03-22  Nate Nielsen <nielsen@memberwebs.com>
 
     * bonobo/seahorse-pgp-file-listener.c: Remove gnome.h header. 
